--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.time::before{
+    content: '';
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #B35920;
+    position: absolute;
+    top: -10px;
+    left: -55px;
+
+}
+
+.time{
+    margin-left: 32px;
+    padding-left: 24px;
+    position: relative;
+}
