--- a/src/input.css
+++ b/src/input.css
@@ -20,3 +20,60 @@
     padding-left: 24px;
     position: relative;
 }
+
+.bar{
+    display: block;
+    background-color: #B35920;
+    width: 25px;
+    height: 2px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    
+}
+
+.hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(2){
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+@media screen and (max-width: 800px){
+    
+    .nav-menu{
+        position: fixed;
+        top: 0;
+        left: -100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 25px;
+        height: 100vh;
+        width: 100%;
+        transition: ease-in-out 0.3s;
+        z-index: 10;
+        text-align: center;
+        background-color: #ffffff;
+    
+    }
+
+    .hamburger.active{
+        position: fixed;
+        /* background-color: #B35920; */
+        top: 10%;
+        right: 5%;
+        z-index: 10;
+    }
+
+    .nav-menu.active{
+        position: fixed;
+        left: 0;
+        top: 0;
+    }
+}
